2009-05-30:  Major overhaul:

             Fixed too liberal transpose parameters in several
             functions.  The conjugate transpose was not available
             in some.

             Make convenience definitions for pp_num, pp_vec, pp_mat
             available on opening Lacaml.Impl.{S,D,C,Z} to be able
             to print more generically.

             Added new functions:

               * dotu  (only for complex numbers)
               * dotc  (only for complex numbers)
               * ger   (all numbers)
               * lassq
               * Mat.syrk_trace
               * Mat.symm2_trace

             Fixed several functions to allow for complex multipliers:
             gemv, gbmv, symv, gemm, symm, trmm, syrk, syr2k.

             Added new "stable" flag to Vec.sqr_nrm2 if over/underflow
             protection is required.

             Numerous internal improvements to make adding functionality
             even easier and to improve performance and numeric
             stability.

2009-05-16:  Added new function:

               * Mat.syrk_diag

             Renamed functions and changed API:

               * Mat.prod_diag -> Mat.gemm_diag
               * Mat.prod_trace -> Mat.gemm_trace

2009-05-03:  Added new functions:

               * Vec.neg

             Thanks to Christophe Troestler <Christophe.Troestler@umh.ac.be>
             for contributing the patch!

2009-04-28:  Added new functions:

               * Mat.prod_diag
               * Mat.prod_trace

2009-04-25:  Major API changes:

             Removed function:

               * Mat.copy (use lacpy instead)

             Modified function:

               * geev (differently named arguments)

             Added functions:

               * lacpy (also copies triangular matrices)
               * larnv (random number generation)

             Fixed Mac OS X build problems.

             Lots of internal cleanups.
