@@ -1,5 +1,5 @@
 name="lacaml"
-version="5.2.0"
+version="5.2.1"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
